# MinecraftAuth

./: CMakeLists.txt  LICENSE  README.md  doxide.yaml  example.cpp  mkdocs.yaml
MinecraftAuth/: MicrosoftOAuth.cpp  MicrosoftOAuth.h
MinecraftAuth/Data/: Account.cpp  Account.h  MinecraftProfile.cpp  MinecraftProfile.h
MinecraftAuth/Data/Responses/: AuthenticationResponse.h  DeviceAuthorizationResponse.h  MicrosoftApiError.h  MinecraftApiError.h  MinecraftAuthResponse.h  XBLAuthenticationResponse.h  XSTSAuthenticationResponse.h  XboxApiError.h
MinecraftAuth/Http/: HttpEngine.cpp  HttpEngine.h  HttpResponse.cpp  HttpResponse.h
MinecraftAuth/Http/cpp-httplib/: HttpLibHttpEngine.cpp  HttpLibHttpEngine.h
MinecraftAuth/Utils/: StringUtils.h
docs/: index.md
docs/MinecraftAuth/: index.md
docs/MinecraftAuth/Account/: index.md
docs/MinecraftAuth/AuthenticationResponse/: index.md
docs/MinecraftAuth/DeviceAuthorizationResponse/: index.md
docs/MinecraftAuth/HttpEngine/: index.md
docs/MinecraftAuth/HttpLibHttpEngine/: index.md
docs/MinecraftAuth/HttpResponse/: index.md
docs/MinecraftAuth/MCTokens/: index.md
docs/MinecraftAuth/MSTokens/: index.md
docs/MinecraftAuth/MicrosoftApiError/: index.md
docs/MinecraftAuth/MicrosoftOAuth/: index.md
docs/MinecraftAuth/MinecraftApiError/: index.md
docs/MinecraftAuth/MinecraftAuthResponse/: index.md
docs/MinecraftAuth/MinecraftProfile/: index.md
docs/MinecraftAuth/StringUtils/: index.md
docs/MinecraftAuth/XBLAuthenticationResponse/: index.md
docs/MinecraftAuth/XSTSAuthenticationResponse/: index.md
docs/MinecraftAuth/XboxApiError/: index.md
site/: 404.html  index.html
site/MinecraftAuth/: index.html
site/MinecraftAuth/Account/: index.html
site/MinecraftAuth/AuthenticationResponse/: index.html
site/MinecraftAuth/DeviceAuthorizationResponse/: index.html
site/search/: search_index.json
(+14 files in other folders)
